--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,13 +25,13 @@ jobs:
         key: ${{ runner.os }}-nuget-${{ hashFiles('**/*.csproj') }}
 
     - name: Restore
-      run: dotnet restore MyApp.sln
+      run: dotnet restore jIAnSoft.Rayleigh.slnx
 
     - name: Build (Release)
-      run: dotnet build MyApp.sln -c Release --no-restore
+      run: dotnet build jIAnSoft.Rayleigh.slnx -c Release --no-restore
 
     - name: Test
       run: |
-        dotnet test MyApp.sln -c Release --no-build \
+        dotnet test jIAnSoft.Rayleigh.slnx -c Release --no-build \
           --logger "trx" \
           --results-directory TestResults
